--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using FiapSmartCity
-@using FiapSmartCity.Models
+﻿@using SmartCity.Net
+@using SmartCity.Net.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
